--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
     "http-server":"^0.8.5",
     "chai": "3.4.1",
     "mocha":"2.3.4"
+  },
+  "main": "src/videocontext.js",
+  "browserify": {
+    "transform": [["babelify", { "presets": ["es2015"] }]]
   }
 }
