--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "videocontext",
-  "version": "0.1.0",
-  "description": "A WebGL & HTML5 video composition library",
+  "version": "0.2.0",
+  "description": "A WebGL & HTML5 graph based video composition library",
   "contributors": [
     {
       "name": "Matthew Shotton",
@@ -9,9 +9,9 @@
     }
   ],
   "scripts":{
-        "build_all":"./node_modules/webpack/bin/webpack.js --optimize-minimize --config webpack.config.js && ./node_modules/webpack/bin/webpack.js --config webpack.commonjs2.config.js && node ./node_modules/esdoc/out/src/ESDocCLI.js -c esdoc.json",
+        "build_all":"./node_modules/webpack/bin/webpack.js --config webpack.config.js && ./node_modules/webpack/bin/webpack.js --config webpack.commonjs2.config.js && node ./node_modules/esdoc/out/src/ESDocCLI.js -c esdoc.json",
         "doc":"node ./node_modules/esdoc/out/src/ESDocCLI.js -c esdoc.json",
-        "build":"./node_modules/webpack/bin/webpack.js --optimize-minimize --config webpack.config.js && ./node_modules/webpack/bin/webpack.js --config webpack.commonjs2.config.js",
+        "build":"./node_modules/webpack/bin/webpack.js --config webpack.config.js && ./node_modules/webpack/bin/webpack.js --config webpack.commonjs2.config.js",
         "dev":"./node_modules/webpack/bin/webpack.js --watch --config webpack.config.js & ./node_modules/http-server/bin/http-server"
   },
   "dependencies": {},
