swapped documentation system over to using jsdoc

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "scripts": {
     "build_all": "./node_modules/webpack/bin/webpack.js --config webpack.config.js && ./node_modules/webpack/bin/webpack.js --config webpack.commonjs2.config.js && node ./node_modules/esdoc/out/src/ESDocCLI.js -c esdoc.json",
-    "doc": "node ./node_modules/esdoc/out/src/ESDocCLI.js -c esdoc.json",
+    "doc": "node ./node_modules/jsdoc/jsdoc.js -c jsdoc.json",
     "build": "./node_modules/webpack/bin/webpack.js --config webpack.config.js && ./node_modules/webpack/bin/webpack.js --config webpack.commonjs2.config.js",
     "dev": "./node_modules/webpack/bin/webpack.js --watch --config webpack.config.js & ./node_modules/http-server/bin/http-server"
   },
@@ -21,11 +21,11 @@
     "babel-loader": "^5.1.4",
     "node-libs-browser": "^0.5.2",
     "webpack": "^1.9.11",
-    "esdoc": "^0.3.1",
     "http-server": "^0.8.5",
     "chai": "3.4.1",
     "mocha": "2.3.4",
-    "eslint-loader": "^1.4.0"
+    "eslint-loader": "^1.4.0",
+    "jsdoc": "^3.4.0"
   },
   "main": "src/videocontext.js",
   "browserify": {
