--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "babel-core": "^5.6.5",
     "babel-loader": "^5.1.4",
+    "babel-polyfill": "^6.16.0",
     "chai": "3.4.1",
     "eslint-loader": "^1.4.0",
     "http-server": "^0.8.5",
