--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "build": "./node_modules/webpack/bin/webpack.js --config webpack.config.js && ./node_modules/webpack/bin/webpack.js --config webpack.commonjs2.config.js",
     "dev": "./node_modules/webpack/bin/webpack.js --watch --config webpack.config.js & ./node_modules/reload/bin/reload -b"
   },
-  "dependencies": {},
+  "dependencies": {
+    "eventemitter3": "^2.0.2"
+  },
   "devDependencies": {
     "babel-core": "^5.6.5",
     "babel-loader": "^5.1.4",
