--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "videocontext",
-  "version": "0.29.0",
+  "version": "0.30.0",
   "description": "A WebGL & HTML5 graph based video composition library",
   "keywords":["video", "context", "composition", "timeline", "html5", "webgl"],
   "contributors": [
@@ -29,7 +29,7 @@
     "reload": "^1.0.1",
     "webpack": "^1.9.11"
   },
-  "main": "src/videocontext.js",
+  "main": "dist/videocontext.commonjs2.js",
   "browserify": {
     "transform": [
       [
