--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "scripts": {
     "doc": "node ./node_modules/jsdoc/jsdoc.js -c jsdoc.json && cp dist/videocontext.* docs/dist/",
-    "build": "node ./node_modules/mocha/bin/mocha --compilers js:babel-core/register && ./node_modules/webpack/bin/webpack.js --config webpack.config.js && ./node_modules/webpack/bin/webpack.js --config webpack.commonjs2.config.js && npm run doc",
+    "build": "node ./node_modules/mocha/bin/mocha --compilers js:babel-core/register && ./node_modules/webpack/bin/webpack.js --config webpack.config.js && npm run doc",
     "dev": "./node_modules/webpack/bin/webpack.js --watch --config webpack.config.js & ./node_modules/reload/bin/reload -b"
   },
   "dependencies": {},
@@ -28,7 +28,7 @@
     "reload": "^1.0.1",
     "webpack": "^1.9.11"
   },
-  "main": "dist/videocontext.commonjs2.js",
+  "main": "dist/videocontext.js",
   "browserify": {
     "transform": [
       [
