--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "doc": "node ./node_modules/jsdoc/jsdoc.js -c jsdoc.json && cp dist/videocontext.* docs/dist/",
     "build": "npm run test && ./node_modules/webpack/bin/webpack.js --config webpack.config.js && npm run doc",
     "test": "node ./node_modules/mocha/bin/mocha --compilers js:babel-core/register",
+    "test-watch": "node ./node_modules/mocha/bin/mocha --compilers js:babel-core/register --watch",
     "dev": "./node_modules/webpack/bin/webpack.js --watch --config webpack.config.js & ./node_modules/reload/bin/reload -b"
   },
   "dependencies": {},
