Add test coverage reporting and missing required fields in package.json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
     "name": "videocontext",
     "version": "0.52.0",
     "description": "A WebGL & HTML5 graph based video composition library",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/bbc/VideoContext.git"
+    },
+    "license": "Apache-2.0",
+    "main": "dist/videocontext.js",
     "keywords": [
         "video",
         "context",
@@ -19,32 +25,39 @@
     "scripts": {
         "dev": "./node_modules/webpack/bin/webpack.js --watch --config webpack.config.js & ./node_modules/reload/bin/reload -b",
         "build": "npm run test && ./node_modules/webpack/bin/webpack.js --config webpack.config.js && npm run doc",
-        "test": "node ./node_modules/mocha/bin/mocha --compilers js:babel-core/register",
-        "test-watch": "node ./node_modules/mocha/bin/mocha --compilers js:babel-core/register --watch",
+        "test": "cross-env NODE_ENV=test node ./node_modules/mocha/bin/mocha --compilers js:babel-core/register",
+        "test-watch": "cross-env NODE_ENV=test node ./node_modules/mocha/bin/mocha --compilers js:babel-core/register --watch",
+        "test-coverage": "cross-env NODE_ENV=test nyc npm run test",
         "doc": "node ./node_modules/jsdoc/jsdoc.js -c jsdoc.json && cp dist/videocontext.* docs/dist/",
         "format": "prettier --write '{src,test}/**/*.js'",
-        "lint": "eslint 'src/**/*.js' 'test/**/*.js'",
-        "precommit": "npm run lint && npm run format && npm run test"
+        "lint": "eslint '{src,test}/**/*.js'",
+        "precommit": "npm run lint && npm run format && npm run test",
+        "release:major": "changelog -M && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version --new-version major && git push origin && git push origin --tags",
+        "release:minor": "changelog -m && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version --new-version minor && git push origin && git push origin --tags",
+        "release:patch": "changelog -p && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version --new-version patch && git push origin && git push origin --tags"
     },
     "dependencies": {},
     "devDependencies": {
         "babel-core": "^5.6.5",
         "babel-loader": "^5.1.4",
+        "babel-plugin-istanbul": "^4.1.6",
         "chai": "3.4.1",
+        "cross-env": "^5.1.6",
         "eslint": "^3.9.1",
         "eslint-loader": "^1.4.0",
-        "http-server": "^0.8.5",
+        "generate-changelog": "^1.7.1",
+        "http-server": "^0.11.1",
         "husky": "^0.14.3",
         "jsdoc": "^3.4.3",
         "mocha": "2.3.4",
         "node-libs-browser": "^0.5.2",
+        "nyc": "^11.8.0",
         "prettier": "^1.13.2",
         "reload": "^1.0.1",
         "sinon": "^4.2.1",
         "webgl-mock": "^0.1.6",
         "webpack": "^1.9.11"
     },
-    "main": "dist/videocontext.js",
     "browserify": {
         "transform": [
             [
@@ -52,9 +65,20 @@
                 {
                     "presets": [
                         "es2015"
-                    ]
+                    ],
+                    "env": {
+                        "test": {
+                            "plugins": [
+                                "istanbul"
+                            ]
+                        }
+                    }
                 }
             ]
         ]
+    },
+    "nyc": {
+        "sourceMap": false,
+        "instrument": false
     }
 }
