Dependencies added. Existing tests tidied up.

--- a/package.json
+++ b/package.json
@@ -48,11 +48,14 @@
         "generate-changelog": "^1.7.1",
         "http-server": "^0.11.1",
         "husky": "^0.14.3",
+        "jest": "^23.1.0",
+        "jest-image-snapshot": "^2.4.2",
         "jsdoc": "^3.4.3",
         "mocha": "2.3.4",
         "node-libs-browser": "^0.5.2",
         "nyc": "^11.8.0",
         "prettier": "^1.13.2",
+        "puppeteer": "^1.4.0",
         "reload": "^1.0.1",
         "sinon": "^4.2.1",
         "webgl-mock": "^0.1.6",
