Regression tests for built-in transition "effectNodes"

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,11 +2,13 @@
     "env": {
         "browser": true,
         "es6": true,
-        "mocha": true
+        "mocha": true,
+        "jest": true
     },
     "extends": "eslint:recommended",
     "parserOptions": {
-        "sourceType": "module"
+        "sourceType": "module",
+        "ecmaVersion": 2017
     },
     "rules": {
         "indent": [
