--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "test-unit": "jest test/unit/*.js",
         "test-watch": "jest ./test/unit/*.js --watch",
         "test-coverage": "jest test/unit/*.js --coverage --collectCoverageFrom 'src/**/*.js'",
+        "test-regression": "jest test/regression/*.js",
         "doc": "jsdoc -c jsdoc.json && cp dist/videocontext.* docs/dist/",
         "format": "prettier --write '{src,test}/**/*.js'",
         "lint": "eslint '{src,test}/**/*.js'",
@@ -58,6 +59,7 @@
         "jest-image-snapshot": "^2.4.2",
         "jsdoc": "^3.4.3",
         "mocha": "^5.2.0",
+        "path": "^0.12.7",
         "prettier": "^1.13.2",
         "puppeteer": "^1.4.0",
         "sinon": "^4.2.1",
