Remove unnecessary `jest` import from test suite

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,7 +21,10 @@
         ],
         "quotes": [
             "error",
-            "double"
+            "double",
+            {
+                "allowTemplateLiterals": true
+            }
         ],
         "semi": [
             "error",
