--- a/package.json
+++ b/package.json
@@ -1,70 +1,71 @@
 {
-    "name": "videocontext",
-    "version": "0.52.0",
-    "description": "A WebGL & HTML5 graph based video composition library",
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/bbc/VideoContext.git"
-    },
-    "license": "Apache-2.0",
-    "main": "dist/videocontext.js",
-    "keywords": [
-        "video",
-        "context",
-        "composition",
-        "timeline",
-        "html5",
-        "webgl"
-    ],
-    "contributors": [
-        {
-            "name": "Matthew Shotton",
-            "email": "matthew.shotton@bbc.co.uk"
-        }
-    ],
-    "scripts": {
-        "dev": "webpack --config webpack.config.js --watch",
-        "build": "npm run test && webpack --config webpack.config.js && npm run doc",
-        "test": "./test.sh",
-        "test-unit": "jest test/unit/*.js",
-        "test-watch": "jest ./test/unit/*.js --watch",
-        "test-coverage": "jest test/unit/*.js --coverage --collectCoverageFrom 'src/**/*.js'",
-        "test-regression": "jest test/regression/*.js",
-        "doc": "jsdoc -c jsdoc.json && cp dist/videocontext.* docs/dist/",
-        "format": "prettier --write '{src,test}/**/*.js'",
-        "lint": "eslint '{src,test}/**/*.js'",
-        "precommit": "npm run lint && npm run format && npm run test-unit",
-        "release:major": "changelog -M && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version --new-version major && git push origin && git push origin --tags",
-        "release:minor": "changelog -m && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version --new-version minor && git push origin && git push origin --tags",
-        "release:patch": "changelog -p && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version --new-version patch && git push origin && git push origin --tags"
-    },
-    "dependencies": {
-        "babel-jest": "^23.0.1",
-        "regenerator-runtime": "^0.11.1"
-    },
-    "devDependencies": {
-        "babel-cli": "^6.26.0",
-        "babel-loader": "^7.1.4",
-        "babel-plugin-add-module-exports": "^0.2.1",
-        "babel-plugin-transform-es2015-modules-umd": "^6.24.1",
-        "babel-preset-env": "^1.7.0",
-        "chai": "^4.1.2",
-        "eslint": "^3.9.1",
-        "eslint-loader": "^2.0.0",
-        "generate-changelog": "^1.7.1",
-        "http-server": "^0.11.1",
-        "husky": "^0.14.3",
-        "jest": "^23.1.0",
-        "jest-cli": "^23.1.0",
-        "jest-image-snapshot": "^2.4.2",
-        "jsdoc": "^3.4.3",
-        "mocha": "^5.2.0",
-        "path": "^0.12.7",
-        "prettier": "^1.13.2",
-        "puppeteer": "^1.4.0",
-        "sinon": "^4.2.1",
-        "webgl-mock": "^0.1.6",
-        "webpack": "^4.10.2",
-        "webpack-cli": "^3.0.1"
+  "name": "videocontext",
+  "version": "0.52.0",
+  "description": "A WebGL & HTML5 graph based video composition library",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/bbc/VideoContext.git"
+  },
+  "license": "Apache-2.0",
+  "main": "dist/videocontext.js",
+  "keywords": [
+    "video",
+    "context",
+    "composition",
+    "timeline",
+    "html5",
+    "webgl"
+  ],
+  "contributors": [
+    {
+      "name": "Matthew Shotton",
+      "email": "matthew.shotton@bbc.co.uk"
     }
+  ],
+  "scripts": {
+    "dev": "webpack --config webpack.config.js --watch",
+    "build": "npm run test && webpack --config webpack.config.js && npm run doc",
+    "test": "./test.sh",
+    "test-unit": "jest test/unit/*.js",
+    "test-watch": "jest ./test/unit/*.js --watch",
+    "test-coverage": "jest test/unit/*.js --coverage --collectCoverageFrom 'src/**/*.js'",
+    "test-regression": "jest test/regression/*.js",
+    "doc": "jsdoc -c jsdoc.json && cp dist/videocontext.* docs/dist/",
+    "format": "prettier --write '{src,test}/**/*.js'",
+    "lint": "eslint '{src,test}/**/*.js'",
+    "precommit": "npm run lint && npm run format && npm run test-unit",
+    "release:major": "changelog -M && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version --new-version major && git push origin && git push origin --tags",
+    "release:minor": "changelog -m && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version --new-version minor && git push origin && git push origin --tags",
+    "release:patch": "changelog -p && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version --new-version patch && git push origin && git push origin --tags"
+  },
+  "dependencies": {
+    "regenerator-runtime": "^0.11.1"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-jest": "^23.2.0",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-es2015-modules-umd": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
+    "chai": "^4.1.2",
+    "eslint": "^3.9.1",
+    "eslint-loader": "^2.0.0",
+    "generate-changelog": "^1.7.1",
+    "http-server": "^0.11.1",
+    "husky": "^0.14.3",
+    "jest": "^23.1.0",
+    "jest-cli": "^23.1.0",
+    "jest-image-snapshot": "^2.4.2",
+    "jsdoc": "^3.4.3",
+    "mocha": "^5.2.0",
+    "path": "^0.12.7",
+    "prettier": "^1.13.2",
+    "puppeteer": "^1.4.0",
+    "sinon": "^4.2.1",
+    "webgl-mock": "^0.1.6",
+    "webpack": "^4.10.2",
+    "webpack-cli": "^3.0.1"
+  }
 }
