update test scripts for ported integration tests

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "build": "npm run test && webpack --config webpack.config.js && npm run doc",
     "test": "./test.sh",
     "test-unit": "jest test/unit/*.js",
-    "test-watch": "jest ./test/*.test.js --watch",
+    "test-integration": "jest test/unit/*.js",
+    "test-watch": "jest --watch",
     "test-coverage": "jest test/unit/*.js --coverage --collectCoverageFrom 'src/**/*.js'",
     "test-regression": "jest test/regression/*.js",
     "doc": "jsdoc -c jsdoc.json && cp dist/videocontext.* docs/dist/",
