setup parrallel test suites for travis
https://docs.travis-ci.com/user/speeding-up-the-build/

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,7 @@ deploy:
   on:
     tags: true
     repo: bbc/VideoContext
+env:
+  - TEST_SUITE=unit
+  - TEST_SUITE=integration
+  - TEST_SUITE=regression
