--- a/package.json
+++ b/package.json
@@ -31,13 +31,14 @@
     "test-watch": "jest --watch",
     "test-coverage": "jest test/unit/*.js --coverage --collectCoverageFrom 'src/**/*.js'",
     "test-regression": "jest test/regression/*.js",
-    "doc": "jsdoc -c jsdoc.json && cp dist/videocontext.* docs/dist/",
+    "docs": "bash ./build-docs.sh",
+    "docs-commit": "npm run docs && git add docs && git commit -m 'update docs in preparation",
     "format": "prettier --write '{src,test}/**/*.js'",
     "lint": "eslint '{src,test}/**/*.js'",
     "precommit": "npm run lint && npm run format && npm run test-unit",
-    "release:major": "changelog -M && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version --new-version major && git push origin && git push origin --tags",
-    "release:minor": "changelog -m && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version --new-version minor && git push origin && git push origin --tags",
-    "release:patch": "changelog -p && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version --new-version patch && git push origin && git push origin --tags"
+    "release:major": "npm run docs-commit && changelog -M && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version --new-version major && git push origin && git push origin --tags",
+    "release:minor": "npm run docs-commit && changelog -m && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version --new-version minor && git push origin && git push origin --tags",
+    "release:patch": "npm run docs-commit && changelog -p && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version --new-version patch && git push origin && git push origin --tags"
   },
   "dependencies": {
     "regenerator-runtime": "^0.11.1"
