--- a/package.json
+++ b/package.json
@@ -36,9 +36,10 @@
     "format": "prettier --write '{src,test}/**/*.js'",
     "lint": "eslint '{src,test}/**/*.js'",
     "precommit": "npm run lint && npm run format && npm run test-unit",
-    "release:major": "npm run docs-commit && changelog -M && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version --new-version major && git push origin && git push origin --tags",
-    "release:minor": "npm run docs-commit && changelog -m && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version --new-version minor && git push origin && git push origin --tags",
-    "release:patch": "npm run docs-commit && changelog -p && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version --new-version patch && git push origin && git push origin --tags"
+    "release:major": "npm run docs-commit && changelog -M && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version --new-version major",
+    "release:minor": "npm run docs-commit && changelog -m && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version --new-version minor",
+    "release:patch": "npm run docs-commit && changelog -p && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version --new-version patch",
+    "postversion": "git push origin --follow-tags"
   },
   "dependencies": {
     "regenerator-runtime": "^0.11.1"
