only build docs on release, not on build

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     ],
   "scripts": {
     "dev": "webpack --config webpack.config.js --watch",
-    "build": "webpack --config webpack.config.js && npm run doc",
+    "build": "webpack --config webpack.config.js",
     "test": "bash ./test.sh",
     "test-unit": "jest test/unit/*.js",
     "test-integration": "jest test/unit/*.js",
