--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ deploy:
     tags: true
     repo: bbc/VideoContext
     branch: master
+  skip_cleanup: true
 env:
   - TEST_SUITE=unit
   - TEST_SUITE=integration
