only build on master this means that travis will build on merges to master but not on merges to other branches. This doesn't stop PRs being built

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,9 @@ env:
   - TEST_SUITE=integration
   - TEST_SUITE=regression
   - TEST_SUITE=build
+branches:
+  only:
+    - master
 jobs:
     include:
       - stage: deploy
