--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "release:major": "npm run docs-commit && changelog -M && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version --new-version major",
     "release:minor": "npm run docs-commit && changelog -m && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version --new-version minor",
     "release:patch": "npm run docs-commit && changelog -p && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version --new-version patch",
-    "postversion": "git push origin --follow-tags"
+    "postversion": "git push -u origin HEAD --follow-tags"
   },
   "dependencies": {
     "regenerator-runtime": "^0.11.1"
