--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,4 @@
 {
     "presets": ["env"],
-    "plugins": [
-        "add-module-exports",
-        "transform-es2015-modules-umd"
-    ]
+    "plugins": []
 }
