--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,7 @@ env:
   - TEST_SUITE=unit
   - TEST_SUITE=integration
   - TEST_SUITE=regression
-  - TEST_SUITE=build
-  - NODE_ENV=production
+  - TEST_SUITE=build NODE_ENV=production
 branches:
   only:
     - master
