modify documentation to refer to yarn instead of npm

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ branches:
 jobs:
     include:
       - stage: deploy
-        script: npm run build
+        script: yarn run build
         deploy:
           provider: npm
           email:
