port first test to cypress

--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
     "test-watch": "jest --watch",
     "test-coverage": "jest test/unit/*.js --coverage --collectCoverageFrom 'src/**/*.js'",
     "test-regression": "jest test/regression/*.js",
+    "cypress": "cypress open",
+    "cypress:update": "cypress open --env updateSnapshots=true",
+    "ci:cypress": "start-server-and-test ci:cypress-server http://localhost:3001 cypress run",
+    "ci:cypress-server": "ws -p 3001",
     "docs": "bash ./build-docs.sh",
     "docs-commit": "npm run docs && git add docs && git diff-index --quiet HEAD || git commit -m 'update docs in preparation for release'",
     "format": "prettier --write '{src,test}/**/*.js'",
@@ -52,6 +56,8 @@
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-es2015-modules-umd": "^6.24.1",
     "babel-preset-env": "^1.7.0",
+    "cypress": "^3.1.5",
+    "cypress-image-snapshot": "^3.0.0",
     "eslint": "^3.9.1",
     "eslint-loader": "^2.0.0",
     "generate-changelog": "^1.7.1",
@@ -61,11 +67,13 @@
     "jest-cli": "^23.1.0",
     "jest-image-snapshot": "^2.4.2",
     "jsdoc": "^3.4.3",
+    "local-web-server": "^2.6.1",
     "path": "^0.12.7",
     "prettier": "^1.13.2",
     "puppeteer": "1.11.0",
     "raw-loader": "^0.5.1",
     "sinon": "^4.2.1",
+    "start-server-and-test": "^1.7.11",
     "webgl-mock": "^0.1.7",
     "webpack": "^4.10.2",
     "webpack-cli": "^3.0.1"
