add eslint plugin for cypress

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,10 @@
 {
+    "plugins": ["cypress"],
     "env": {
         "browser": true,
         "es6": true,
-        "jest": true
+        "jest": true,
+        "cypress/globals": true
     },
     "extends": "eslint:recommended",
     "parserOptions": {
