--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "puppeteer": "^1.4.0",
     "raw-loader": "^0.5.1",
     "sinon": "^4.2.1",
+    "web-audio-test-api": "^0.5.2",
     "webgl-mock": "^0.1.7",
     "webpack": "^4.10.2",
     "webpack-cli": "^3.0.1"
