--- a/package.json
+++ b/package.json
@@ -77,6 +77,9 @@
   "jest": {
     "moduleNameMapper": {
       "\\.(frag|vert)$": "<rootDir>/__mocks__/glsl.js"
-    }
+    },
+    "setupFiles": [
+      "<rootDir>/jest/globals.js"
+    ]
   }
 }
