start tidying up

--- a/package.json
+++ b/package.json
@@ -31,14 +31,14 @@
     "test-watch": "jest --watch",
     "test-coverage": "jest test/unit/*.js --coverage --collectCoverageFrom 'src/**/*.js'",
     "test-regression": "jest test/regression/*.js",
-    "cypress": "yarn run _start-cypress-server-with _cypress:open",
-    "cypress:update-snapshots": "yarn run _start-cypress-server-with _cypress:update",
-    "ci:cypress": "yarn run _start-cypress-server-with _cypress:run",
-    "_cypress:update": "cypress open --env updateSnapshots=true",
-    "_cypress:open": "cypress open",
-    "_cypress:run": "cypress run",
-    "_start-cypress-server-with": "start-server-and-test _cypress-server http://localhost:3001",
-    "_cypress-server": "ws -p 3001",
+    "cypress": "yarn run _server_cy_then _cy:open",
+    "cypress:update-snapshots": "yarn run _server_cy_then _cy:update",
+    "ci:cypress": "yarn run _server_cy_then _cy:run",
+    "_cy:update": "cypress run --env updateSnapshots=true",
+    "_cy:open": "cypress open",
+    "_cy:run": "cypress run",
+    "_server_cy_then": "start-server-and-test _cy-server http://localhost:3001",
+    "_cy-server": "ws -p 3001",
     "docs": "bash ./build-docs.sh",
     "docs-commit": "npm run docs && git add docs && git diff-index --quiet HEAD || git commit -m 'update docs in preparation for release'",
     "format": "prettier --write '{src,test}/**/*.js'",
