run build and server concurrently

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "_cy:open": "cypress open",
     "_cy:run": "cypress run",
     "_server_cy_then": "start-server-and-test _cy-server http://localhost:3001",
-    "_cy-server": "ws -p 3001",
+    "_cy-server": "concurrently \"npm run dev\" \"ws -p 3001\"",
     "docs": "bash ./build-docs.sh",
     "docs-commit": "npm run docs && git add docs && git diff-index --quiet HEAD || git commit -m 'update docs in preparation for release'",
     "format": "prettier --write '{src,test}/**/*.js'",
@@ -60,6 +60,7 @@
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-es2015-modules-umd": "^6.24.1",
     "babel-preset-env": "^1.7.0",
+    "concurrently": "^4.1.1",
     "cypress": "^3.1.5",
     "cypress-image-snapshot": "^3.0.0",
     "eslint": "^4.18.2",
@@ -77,8 +78,8 @@
     "prettier": "^1.13.2",
     "puppeteer": "1.11.0",
     "raw-loader": "^0.5.1",
-    "start-server-and-test": "^1.7.11",
     "sinon": "^7.2.7",
+    "start-server-and-test": "^1.7.11",
     "webgl-mock": "^0.1.7",
     "webpack": "^4.10.2",
     "webpack-cli": "^3.0.1"
