--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "ci:cypress": "yarn run _server_cy_then _cy:run",
     "_cy:update": "cypress run --env updateSnapshots=true",
     "_cy:open": "cypress open",
-    "_cy:run": "cypress run",
+    "_cy:run": "./cypress-run.sh",
     "_server_cy_then": "start-server-and-test _cy-server http://localhost:3001",
     "_cy-server": "concurrently \"npm run dev\" \"ws -p 3001\"",
     "docs": "bash ./build-docs.sh",
@@ -61,7 +61,7 @@
     "babel-plugin-transform-es2015-modules-umd": "^6.24.1",
     "babel-preset-env": "^1.7.0",
     "concurrently": "^4.1.1",
-    "cypress": "^3.1.5",
+    "cypress": "3.3.2",
     "cypress-image-snapshot": "^3.0.0",
     "eslint": "^4.18.2",
     "eslint-loader": "^2.0.0",
